syntax = "proto3";
package proto;

message ReadRequest {
    int32 length = 1;
}

message ReadResponse {
    bytes read = 1;
    string error = 2;
    bool errored = 3;
}

message CloseRequest {}

message CloseResponse {}

service Reader {
    rpc Read(ReadRequest) returns (ReadResponse);
    rpc Close(CloseRequest) returns (CloseResponse);
}